# ygo_destiny

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  makefile
locales/: .gitignore  de-DE.yml  en-GB.yml  en.yml  fr-FR.yml  it-IT.yml  jp.yml  pt-PT.yml
py2xml/: blank_template.py  gtk_xml.py  project.py  xml.py
py2xml/ui/: __init__.py  collection_list.py  collection_row.py  gresources.py  gschema.py  new_collection_window.py  update_page.py  window.py
resources/: gresources.xml
resources/meml/: blank_ui.meml  meta.meml
resources/meml/config/: gresources.meml  gschema.meml
resources/meml/templates/: collection_create_window.meml  collection_list.meml  collection_row.meml  edit_collection_page.meml  new_collection_window.meml  update_page.meml  window.meml
resources/py2xml/: blank_template.py  gtk_xml.py  project.py  xml.py
resources/py2xml/ui/: __init__.py  update_page.py  window.py
resources/templates/: .info  update_page.ui  window.ui
resources/ui/: main_menu.ui  window.ui
src/: data.rs  db.rs  lib.rs  main.rs  types.rs
src/app/: mod.rs
src/components/: mod.rs  view_controller.rs
src/components/collection_picker/: mod.rs
src/components/collection_picker/collection_entry/: mod.rs
src/components/view_controller/: mod.rs
src/components/view_controller/pages/: collection_page.rs  create_collection_page.rs  draft_settings_page.rs  mod.rs
src/db/: mod.rs
src/logic/: mod.rs
src/logic/ext_data/: mod.rs
src/logic/user_data/: mod.rs
src/logic/utils/: cache.rs  http.rs  mod.rs  paths.rs
src/templates/: back_button.rs  content_box.rs  mod.rs  status_page.rs
src/ui/: app.rs  main_menu.rs  mod.rs  window.rs
src/ui/components/: collection_entry.rs  mod.rs
src/ui/pages/: mod.rs
src/ui/templates/: mod.rs  page.rs
src/ui/utils/: mod.rs
src/ui/widgets/: mod.rs
src/user_data/collection/: card.rs  change.rs  meta_data.rs  mod.rs
tests/: http_test.rs
utils/: build_xml.sh  compile_schemas.sh  fmt.sh  quick_run.sh
utils/py2xml/: blank_template.py  project.py
utils/py2xml/ui/: gresources.py  update_page.py
ygod_lib/: Cargo.toml
ygod_lib/src/: lib.rs  paths.rs
ygod_lib/src/http/: card_images.rs  mod.rs
ygod_lib/src/http/ygo_data/: banlists.rs  cardinfo.rs  cardsets.rs  mod.rs  version.rs
ygod_lib/src/http/ygo_data/cardsets/: eval.rs
(+47 files in other folders)
