[package]
name = "ygo_destiny"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
directories = "5.0"
env_logger = { version = "0.10", features = ["color"] }
log = "0.4"
once_cell = "1.17"
reqwest = { version = "0.11", features = ["blocking"] }
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = "1.0"
